  - Speed up maintaining the various lists of Node children by using
    dictionaries to avoid "x in list" searches.

  - Cache the computed list of Node children minus those being Ignored
    so it's only calculated once.

  - Fix use of the --cache-show option when building a Program()
    (or using any other arbitrary action) by making sure all Action
    instances have strfunction() methods.

  From Gary Oberbrunner:

  - Report the target being built in error messages when building
    multiple sources from different extensions, or when the target file
    extension can't be deduced, or when we don't have an action for a
    file suffix.

  - Provide helpful error messages when the arguments to env.Install()
    are incorrect.

  - Fix the value returned by the Node.prevsiginfo() method to conform
    to a previous change when checking whether a node is current.

  From Laurent Pelecq:

  - When the -debug=pdb option is specified, use pdb.Pdb().runcall() to
    call pdb directly, don't call Python recursively.

  From Christoph Wiedemann:

  - Have the g++ Tool actually use g++ in preference to c++.

  - Have the gcc Tool actually use gcc in preference to cc.

  - Add a gnutools.py test of the GNU tool chain.

  - Be smarter about linking: use $CC by default and $CXX only if we're
    linking with any C++ objects.

  - Avoid SCons hanging when a piped command has a lot of output to read.

  - Add QT support for preprocessing .ui files into .c files.



RELEASE 0.90 - Wed, 25 Jun 2003 14:24:52 -0500

  From Chad Austin:

  - Fix the _concat() documentation, and add a test for it.

  - Portability fixes for non-GNU versions of lex and yacc.

  From Matt Balvin:

  - Fix handling of library prefixes when the subdirectory matches
    the prefix.

  From Timothee Bessett:

  - Add an M4 Builder.

  From Charles Crain:

  - Use '.lnk' as the suffix on the temporary file for linking long
    command lines (necessary for the Phar Lap linkloc linker).
